# mycoollib

./: Makefile.am  configure.ac  mycoollib.c  mycoollib.h
